[tool.poetry]
name = "competentbestsweepsoftware"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
ipython = "^7.19.0"
numpy = "^1.19.5"
matplotlib = "^3.3.3"
scipy = "^1.6.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
